fix toggle button optical alignment

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ h6 {
     font-size: 3rem;
     color: var(--bg-color);
     background-color: var(--primary-color-text);
-    padding-top: 3px;
+    padding-top: 0.4rem;
     border-radius: 5000px;
     height: 5rem;
 }
